// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProjectPreviewProgressBar /> should render correctly progress bar for closed step 1`] = `
<Progress>
  <ProgressBar
    active={false}
    bsClass="progress-bar"
    className="progress-bar_grey"
    isChild={false}
    label={
      <FormattedMessage
        id="step.state.closed"
        values={Object {}}
      />
    }
    max={100}
    min={0}
    now={100}
    srOnly={false}
    striped={false}
  />
</Progress>
`;

exports[`<ProjectPreviewProgressBar /> should render correctly progress bar for closed step which remains a current step 1`] = `
<Progress>
  <ProgressBar
    active={false}
    bsClass="progress-bar"
    bsStyle="success"
    isChild={false}
    label={
      <FormattedMessage
        id="step.state.open"
        values={Object {}}
      />
    }
    max={100}
    min={0}
    now={50}
    srOnly={false}
    striped={false}
  />
</Progress>
`;

exports[`<ProjectPreviewProgressBar /> should render correctly progress bar for future step 1`] = `
<Progress>
  <ProgressBar
    active={false}
    bsClass="progress-bar"
    className="progress-bar_empty"
    isChild={false}
    label={
      <FormattedMessage
        id="step.state.future"
        values={Object {}}
      />
    }
    max={100}
    min={0}
    now={100}
    srOnly={false}
    striped={false}
  />
</Progress>
`;

exports[`<ProjectPreviewProgressBar /> should render correctly progress bar for open & timeless step 1`] = `
<Progress>
  <ProgressBar
    active={false}
    bsClass="progress-bar"
    bsStyle="success"
    isChild={false}
    label={
      <FormattedMessage
        id="step.timeless"
        values={Object {}}
      />
    }
    max={100}
    min={0}
    now={100}
    srOnly={false}
    striped={false}
  />
</Progress>
`;

exports[`<ProjectPreviewProgressBar /> should render correctly progress bar for open step 1`] = `
<Progress>
  <ProgressBar
    active={false}
    bsClass="progress-bar"
    bsStyle="success"
    isChild={false}
    label={
      <FormattedMessage
        id="step.state.open"
        values={Object {}}
      />
    }
    max={100}
    min={0}
    now={50}
    srOnly={false}
    striped={false}
  />
</Progress>
`;
